feat: Finished all pages

--- a/src/layouts/sign-up-wrapper.hbs
+++ b/src/layouts/sign-up-wrapper.hbs
@@ -3,7 +3,7 @@
     {{> head 'MeowTalk - Sign Up' }}
     <body>
         <div class="app">
-            <main class="sign-up-container">
+            <main class="small-container">
                 {{{body}}}
             </main>
         </div>
