--- a/src/pages/sign-in.hbs
+++ b/src/pages/sign-in.hbs
@@ -1,23 +1,25 @@
 ---
-fields: 
-    - 
-        label: 'Login'
-        type: 'text'
-        placeholder: 'Enter your login'
-    - 
-        label: 'Password'
-        type: 'password'
-        placeholder: 'Enter your password'
+formData:
+    fields: 
+        - 
+            label: 'Login'
+            type: 'text'
+            placeholder: 'Enter your login'
+        - 
+            label: 'Password'
+            type: 'password'
+            placeholder: 'Enter your password'
 
-buttons:
-    -
-        type: 'button'
-        modifier: 'link'
-        text: 'Sing Up'
-    -
-        type: 'submit'
-        modifier: 'primary'
-        text: 'Sign In'
+    buttons:
+        -
+            type: 'submit'
+            modifier: 'primary'
+            text: 'Sign In'
+        -
+            type: 'button'
+            modifier: 'link'
+            text: 'Sing Up'
+
 ---
 
 {{!< sign-in-wrapper }}
@@ -25,15 +27,5 @@ buttons:
 <div>
     <div class="logo" ></div>
     <h1 class="title">Sign In</h1>
-
-    <form class="form">
-        {{#each fields }}
-            {{> 'input/input' this }}
-        {{/each}}
-        <div class="form-actions">
-            {{#each buttons }}
-                {{> 'button/button' this }}
-            {{/each}}
-        </div>
-    </form>
+    {{> 'form/form' formData }}
 </div>
