--- a/src/partials/input/input.hbs
+++ b/src/partials/input/input.hbs
@@ -4,6 +4,7 @@
             class="input-field {{ class }}" 
             type="{{ type }}"
             placeholder="{{ placeholder }}"
+            value="{{ value }}"
         />
     </label>
 </div>
