--- a/src/layouts/settings-wrapper.hbs
+++ b/src/layouts/settings-wrapper.hbs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-    {{> head 'MeowTalk - Sign In' }}
+    {{> head 'MeowTalk - settings' }}
     <body>
         <div class="app">
-            <main class="small-container">
+            <main class="app-container">
                 {{{body}}}
             </main>
         </div>
