--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -3,5 +3,9 @@
 <div>
     <p>chats lits</p>
     <a href="./sign-in.hbs">to sign in page</a><br />
-    <a href="./sign-up.hbs">to sign up page</a>
+    <a href="./sign-up.hbs">to sign up page</a><br />
+    <a href="./settings-password.hbs">to settings-password page</a><br />
+    <a href="./settings-user.hbs">to settings-user page</a><br />
+    <a href="./error-404.hbs">to 404 error page</a><br />
+    <a href="./error-500.hbs">to 500 error page</a>
 </div>
