--- a/src/partials/head.hbs
+++ b/src/partials/head.hbs
@@ -3,7 +3,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=ebge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ this }}</title>
-    <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.11.0/build/cssnormalize/cssnormalize-min.css">
+    <link 
+        rel="stylesheet" 
+        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" 
+        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" 
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="../styles/style.css">
 
     {{!-- icons --}}
