chore: Added eslint, stylelint and typescript

--- a/src/partials/sidebar/sidebar.hbs
+++ b/src/partials/sidebar/sidebar.hbs
@@ -4,7 +4,7 @@
     </div>
     <ul class="sidebar-list">
         {{#each this }}
-            <li class="sidebar-listItem {{ this.modifier }}">
+            <li class="sidebar-list-item {{ this.modifier }}">
                 <img src="{{ this.icon }}" alt={{ this.label }}/>
                 {{ this.label }}
             </li>
