--- a/src/partials/button/style.css
+++ b/src/partials/button/style.css
@@ -1,26 +1,22 @@
 .button {
-    font-family: var(--font-family-set);
-    font-size: var(--regular-font-size);
+  font-family: var(--font-family-set);
+  font-size: var(--regular-font-size);
 }
 
 .button-primary {
-    padding: var(--spaces-8) var(--spaces-24);
-
-    border: var(--field-border-width) solid var(--bright-green);
-    border-radius: var(--field-border-radius);
-    box-shadow: 0px 2px 0px var(--shadow-color);
-    background: var(--bright-green);
-    
-    color: var(--white);
+  padding: var(--spaces-8) var(--spaces-24);
+  border: var(--field-border-width) solid var(--bright-green);
+  border-radius: var(--field-border-radius);
+  box-shadow: 0 2px 0 var(--shadow-color);
+  background: var(--bright-green);
+  color: var(--white);
 }
 
 .button-link {
-    padding: 0;
-
-    border: none;
-    background: none;
-
-    text-decoration: underline;
-    font-weight: var(--semi-bold-font-weight);
-    color: var(--bright-green);
+  padding: 0;
+  border: none;
+  background: none;
+  text-decoration: underline;
+  font-weight: var(--semi-bold-font-weight);
+  color: var(--bright-green);
 }
