--- a/src/partials/sidebar/style.css
+++ b/src/partials/sidebar/style.css
@@ -1,41 +1,34 @@
 .sidebar {
-    height: 100%;
-    min-width: 300px;
-    max-width: 300px;
-
-    border-right: var(--field-border-width) solid var(--dirty-pink);
+  height: 100%;
+  min-width: 300px;
+  max-width: 300px;
+  border-right: var(--field-border-width) solid var(--dirty-pink);
 }
 
 .sidebar-header {
-    display: flex;
-    align-items: center;
-
-    height: 52px;
-    padding: 0 var(--spaces-24);
-
-    border-bottom: var(--field-border-width) solid var(--dirty-pink);
+  display: flex;
+  align-items: center;
+  height: 52px;
+  padding: 0 var(--spaces-24);
+  border-bottom: var(--field-border-width) solid var(--dirty-pink);
 }
 
 .sidebar-list {
-    padding: 0;
-    margin: 0;
-
-    list-style-type: none;
-
-    cursor: pointer;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  cursor: pointer;
 }
 
-.sidebar-listItem {
-    display: flex;
-    align-items: center;
-    gap: var(--spaces-24);
-
-    height: 52px;
-    padding: 0 var(--spaces-24);
-
-    border-bottom: var(--field-border-width) solid var(--dirty-pink);
+.sidebar-list-item {
+  display: flex;
+  align-items: center;
+  gap: var(--spaces-24);
+  height: 52px;
+  padding: 0 var(--spaces-24);
+  border-bottom: var(--field-border-width) solid var(--dirty-pink);
 }
 
-.sidebar-listItem.active {
-    background-color: var(--light-pink);
+.sidebar-list-item.active {
+  background-color: var(--light-pink);
 }
