--- a/src/pages/root/root.hbs
+++ b/src/pages/root/root.hbs
@@ -1,10 +1,24 @@
 <main class="app-container">
-    <div>
-        <a href="./chats">to chats page</a><br />
-        <a href="./sign-in">to sign in page</a><br />
-        <a href="./sign-up">to sign up page</a><br />
-        <a href="./settings">to settings page</a><br />
-        <a href="./error-404">to 404 error page</a><br />
-        <a href="./error-500">to 500 error page</a>
+    <nav>
+        <ul>
+            <li>
+                <a href="./chats">to chats page</a>
+            </li>
+            <li>
+                <a href="./sign-in">to sign in page</a>
+            </li>
+            <li>
+                <a href="./sign-up">to sign up page</a>
+            </li>
+            <li>
+                <a href="./settings">to settings page</a>
+            </li>
+            <li>
+                <a href="./error-404">to 404 error page</a>
+            </li>
+            <li>
+                <a href="./error-500">to 500 error page</a>
+            </li>
+        </ul>
     </div>
 </main>
